--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,19 @@
-
+<div id="loading-page" class="loading-page">
+  <div class="lds-default">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
 <app-header *ngIf="hasHeader"></app-header>
-<router-outlet
-></router-outlet>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
